Minor cleanup of docstring

--- a/Generative Adversarial Active Learning.ipynb
+++ b/Generative Adversarial Active Learning.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "from gaaltrainer import GAALTrainer\n",
-    "from activesvmtrainer import ActiveSVMTrainer"
+    "from activesvmtrainer import ActiveSVMTrainer\n",
+    "from randomtrainer import RandomTrainer"
    ]
   },
   {
@@ -1447,6 +1448,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3c657c58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random Sampling - train and test on mnist 5 & 7\n",
+    "classifier_acc_mnistmnist_randomsampling = []\n",
+    "classifier_nsamples_mnistmnist_randomsampling = []\n",
+    "for _ in range(10):\n",
+    "    rnd = RandomTrainer(traindatasettype='mnist', testdatasettype='mnist', \n",
+    "                            n_samples_end=500, \n",
+    "                            start_samples=50)\n",
+    "    classifier_acc_mnistmnist_randomsampling.append(rnd.learner_acc_history)\n",
+    "    classifier_nsamples_mnistmnist_randomsampling.append(rnd.n_samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6bde40c4",
    "metadata": {},
    "outputs": [],
@@ -1480,6 +1499,24 @@
     "                            start_samples=50)\n",
     "    classifier_acc_mnistusps_activesvm.append(asvm.learner_acc_history)\n",
     "    classifier_nsamples_mnistusps_activesvm.append(asvm.n_samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5d95d2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random Sampling - train on mnist 5 & 7, test on usps\n",
+    "classifier_acc_mnistusps_randomsampling = []\n",
+    "classifier_nsamples_mnistusps_randomsampling = []\n",
+    "for _ in range(10):\n",
+    "    rnd = RandomTrainer(traindatasettype='mnist', testdatasettype='usps', \n",
+    "                            n_samples_end=500, \n",
+    "                            start_samples=50)\n",
+    "    classifier_acc_mnistusps_randomsampling.append(rnd.learner_acc_history)\n",
+    "    classifier_nsamples_mnistusps_randomsampling.append(rnd.n_samples)"
    ]
   },
   {
@@ -2909,6 +2946,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a4529ca3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random Sampling - train and test on cifar10\n",
+    "classifier_acc_cifar10_randomsampling = []\n",
+    "classifier_nsamples_cifar10_randomsampling = []\n",
+    "for _ in range(10):\n",
+    "    rnd = RandomTrainer(traindatasettype='mnist', testdatasettype='usps', \n",
+    "                            n_samples_end=500, \n",
+    "                            start_samples=50)\n",
+    "    classifier_acc_cifar10_randomsampling.append(rnd.learner_acc_history)\n",
+    "    classifier_nsamples_cifar10_randomsampling.append(rnd.n_samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "005b96a3",
    "metadata": {},
@@ -2993,7 +3048,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.11"
   }
  },
  "nbformat": 4,
