Update README and try to debug existing files
This is a temporary commit, and there will be coming push in the following hours

--- a/Generative Adversarial Active Learning.ipynb
+++ b/Generative Adversarial Active Learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5cf7cae7",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cf0381ab",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,9 @@
   {
    "cell_type": "markdown",
    "id": "24543703",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Random Sampling"
    ]
@@ -183,7 +185,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3c657c58",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# Random Sampling Example - train and test on mnist 5 & 7\n",
@@ -201,7 +205,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "52a763bc",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# # Save results to pickle\n",
@@ -213,7 +219,9 @@
   {
    "cell_type": "markdown",
    "id": "319373ec",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Simple GAN"
    ]
@@ -223,6 +231,7 @@
    "execution_count": null,
    "id": "31e15edf",
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -245,7 +254,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7e8768eb",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# # Save results to pickle\n",
@@ -257,7 +268,9 @@
   {
    "cell_type": "markdown",
    "id": "e98b7d8e",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Fully Supervised Training"
    ]
@@ -267,6 +280,7 @@
    "execution_count": null,
    "id": "7a8c313c",
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -279,7 +293,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dc0d58f5",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# # Save results to pickle\n",
@@ -305,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.11"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
