Added more ressults from diversity

--- a/Generative Adversarial Active Learning.ipynb
+++ b/Generative Adversarial Active Learning.ipynb
@@ -12,6 +12,10 @@
     "from trainers.randomtrainer import RandomTrainer\n",
     "from trainers.fullysupervisedtrainer import FSTrainer\n",
     "from trainers.simplegantrainer import SimpleGANTrainer\n",
+    "\n",
+    "from trainers.makegan import GANTrainer\n",
+    "from trainers.makewassersteingan import WGANTrainer\n",
+    "\n",
     "import dill as pickle"
    ]
   },
@@ -303,6 +307,54 @@
     "# with open('./results/result_fs_mnistmnist.pkl', 'wb') as file:\n",
     "#     pickle.dump(result_fs_mnistmnist, file)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee834a95",
+   "metadata": {},
+   "source": [
+    "# Train a GAN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "148b7ec1",
+   "metadata": {},
+   "source": [
+    "## DC-GAN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6184ca9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "savepath = './gan/cifar10/'\n",
+    "gantrainer = GANTrainer('mnist', savepath, latent_dim = 100, \n",
+    "                        n_epochs = 1000, batchsize = 256, retries = 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c7d8175",
+   "metadata": {},
+   "source": [
+    "## Wasserstein GAN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0c8c54e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "savepath = './wgan/cifar10/'\n",
+    "wgan = WGANTrainer('cifar10', savepath, latent_dim = 100, n_epochs=1000, \n",
+    "                   batchsize=256, retries = 5, n_critic = 5)"
+   ]
   }
  ],
  "metadata": {
@@ -321,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.11"
   }
  },
  "nbformat": 4,
