Updated readme and main nb

--- a/Generative Adversarial Active Learning.ipynb
+++ b/Generative Adversarial Active Learning.ipynb
@@ -24,7 +24,7 @@
    "id": "c2f6d3cc",
    "metadata": {},
    "source": [
-    "Instructions on the use of the functions can be found in the docstrings which can be viewed using the following command"
+    "Instructions on the use of each import Class can be found in the docstrings which can be viewed using the following sample command"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "id": "edccc2ae",
    "metadata": {},
    "source": [
-    "Perform 10 loops of each and obtain the accuracies of the classifier start at 50 labelled samples, ending at 350 labelled samples."
+    "Perform 10 loops of each and obtain the accuracies of the classifier start at 50 labelled samples, ending at 350 labelled samples. Then, save the results to a pickle file."
    ]
   },
   {
@@ -132,6 +132,43 @@
     "# result_gaal_cifar10_wgan = ['GAAL train and test on cifar10, WGAN', classifier_acc_cifar10_gaal, classifier_nsamples_cifar10_gaal, gaal.x_train_end, gaal.y_train_end]\n",
     "# with open('./results/result_gaal_cifar10_wgan.pkl', 'wb') as file:\n",
     "#     pickle.dump(result_gaal_cifar10_wgan, file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73467a67",
+   "metadata": {},
+   "source": [
+    "## GAAL with Diversity Measure\n",
+    "\n",
+    "Utilise the option to add a diversity measure (average distance) when generating samples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06ec4e2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls = [0.0001, 0.001, 0.01, 0.1, 1]\n",
+    "for ll in ls:\n",
+    "    classifier_acc = []\n",
+    "    classifier_nsamples = []\n",
+    "    for _ in range(10):\n",
+    "        gaal = GAALTrainer(traindatasettype='cifar10', testdatasettype='cifar10', \n",
+    "                        generatorpath='./gans/cifar10-dcgan/generator_model_1500.h5', \n",
+    "                        oraclepath='./oracles/cifar10ha.h5', \n",
+    "                        n_samples_end=350, threshold=1e-8, \n",
+    "                        start_samples=50, latent_dim=100, \n",
+    "                        diversity = 'avgdist', L = ll) # diversity options\n",
+    "        classifier_acc.append(gaal.learner_acc_history)\n",
+    "        classifier_nsamples.append(gaal.n_samples)\n",
+    "\n",
+    "# Save results to pickle\n",
+    "# result_gaal = [f'GAAL train and test on CIFAR10 with Diversity, L = {ll}', classifier_acc, classifier_nsamples, gaal.x_train_end, gaal.y_train_end]\n",
+    "# with open(f'./results/result_gaal_cifar10_d_{ll}.pkl', 'wb') as file:\n",
+    "#     pickle.dump(result_gaal, file)"
    ]
   },
   {
