--- a/Generative Adversarial Active Learning.ipynb
+++ b/Generative Adversarial Active Learning.ipynb
@@ -24,7 +24,7 @@
    "id": "c2f6d3cc",
    "metadata": {},
    "source": [
-    "Instructions on the use of each import Class can be found in the docstrings which can be viewed using the following sample command"
+    "Instructions on the use of each imported Class can be found in the docstrings which can be viewed using the following sample command."
    ]
   },
   {
@@ -72,16 +72,8 @@
     "                       n_samples_end=350, threshold=1e-8, \n",
     "                       start_samples=50, latent_dim=100)\n",
     "    classifier_acc_mnistmnist_gaal.append(gaal.learner_acc_history)\n",
-    "    classifier_nsamples_mnistmnist_gaal.append(gaal.n_samples)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df25e911",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    classifier_nsamples_mnistmnist_gaal.append(gaal.n_samples)\n",
+    "\n",
     "# # Save results to pickle\n",
     "# result_gaal_mnistmnist = ['GAAL train and test on mnist', classifier_acc_mnistmnist_gaal, classifier_nsamples_mnistmnist_gaal, gaal.x_train_end, gaal.y_train_end]\n",
     "# with open('./results/result_gaal_mnistmnist.pkl', 'wb') as file:\n",
@@ -118,16 +110,7 @@
     "                       start_samples=50, latent_dim=100)\n",
     "    classifier_acc_cifar10_gaal.append(gaal.learner_acc_history)\n",
     "    classifier_nsamples_cifar10_gaal.append(gaal.n_samples)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a16a5f77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "# # Save results to pickle\n",
     "# result_gaal_cifar10_wgan = ['GAAL train and test on cifar10, WGAN', classifier_acc_cifar10_gaal, classifier_nsamples_cifar10_gaal, gaal.x_train_end, gaal.y_train_end]\n",
     "# with open('./results/result_gaal_cifar10_wgan.pkl', 'wb') as file:\n",
@@ -196,16 +179,8 @@
     "                            oraclepath='./oracles/mnist57.h5', n_samples_end=350, \n",
     "                            start_samples=50)\n",
     "    classifier_acc_mnistmnist_activesvm.append(asvm.learner_acc_history)\n",
-    "    classifier_nsamples_mnistmnist_activesvm.append(asvm.n_samples)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2b2c380",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    classifier_nsamples_mnistmnist_activesvm.append(asvm.n_samples)\n",
+    "\n",
     "# # Save results to pickle\n",
     "# result_activesvm_mnistmnist = ['Active SVM train and test on mnist', classifier_acc_mnistmnist_activesvm, classifier_nsamples_mnistmnist_activesvm]\n",
     "# with open('./results/result_activesvm_mnistmnist.pkl', 'wb') as file:\n",
@@ -239,18 +214,8 @@
     "                            n_samples_end=350, \n",
     "                            start_samples=50)\n",
     "    classifier_acc_mnistmnist_randomsampling.append(rnd.learner_acc_history)\n",
-    "    classifier_nsamples_mnistmnist_randomsampling.append(rnd.n_samples)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52a763bc",
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
+    "    classifier_nsamples_mnistmnist_randomsampling.append(rnd.n_samples)\n",
+    "\n",
     "# # Save results to pickle\n",
     "# result_random_mnistmnist = ['Random Sampling train and test on mnist', classifier_acc_mnistmnist_randomsampling, classifier_nsamples_mnistmnist_randomsampling]\n",
     "# with open('./results/result_random_mnistmnist.pkl', 'wb') as file:\n",
@@ -288,22 +253,11 @@
     "                       start_samples=50, latent_dim=100)\n",
     "    classifier_acc_mnistmnist_simplegan.append(simplegan.learner_acc_history)\n",
     "    classifier_nsamples_mnistmnist_simplegan.append(simplegan.n_samples)\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e8768eb",
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
+    "\n",
     "# # Save results to pickle\n",
     "# result_simplegan_mnistmnist = ['Simple GAN train and test on mnist', classifier_acc_mnistmnist_simplegan, classifier_nsamples_mnistmnist_simplegan, simplegan.x_train_end, simplegan.y_train_end]\n",
     "# with open('./results/result_simplegan_mnistmnist.pkl', 'wb') as file:\n",
-    "#     pickle.dump(result_simplegan_mnistmnist, file)"
+    "#     pickle.dump(result_simplegan_mnistmnist, file)\n"
    ]
   },
   {
@@ -327,20 +281,12 @@
    "outputs": [],
    "source": [
     "# Fully Supervised Example - train and test on mnist\n",
-    "fs_mnistmnist = FSTrainer('mnist','mnist')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc0d58f5",
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
+    "fs_mnistmnist = FSTrainer('mnist','mnist')\n",
+    "fs_testacc = fs_mnistmnist.learner_acc_history\n",
+    "fs_nsamples = fs_mnistmnist.x_train.shape[0]\n",
+    "\n",
     "# # Save results to pickle\n",
-    "# result_fs_mnistmnist = ['Fully Supervised train and test on mnist',fs_testacc_mnistmnist,fs_nsamples_mnistmnist]\n",
+    "# result_fs_mnistmnist = ['Fully Supervised train and test on mnist',fs_testacc,fs_nsamples]\n",
     "# with open('./results/result_fs_mnistmnist.pkl', 'wb') as file:\n",
     "#     pickle.dump(result_fs_mnistmnist, file)"
    ]
@@ -369,7 +315,7 @@
    "outputs": [],
    "source": [
     "savepath = './gan/cifar10/'\n",
-    "gantrainer = GANTrainer('mnist', savepath, latent_dim = 100, \n",
+    "gantrainer = GANTrainer('cifar10', savepath, latent_dim = 100, \n",
     "                        n_epochs = 1000, batchsize = 256, retries = 5)"
    ]
   },
